# ConceptBottleneckEval

./: .gitignore  README.md  analysis.py  download_file.py  experiments.py  hyperparameters.py  main.py  pyproject.toml  run_exp.sh  test_loc_acc.py
APN/: anp_const.py  apn_consts.py  apn_loss.py  apn_utils.py  index_translation_util.py  protomod.py
CUB/: README.md  data_processing.py  dataset.py  eval_apn_maps.py  generate_new_data.py  models.py  saliency_utily.py  template_model.py  train.py  tti.py  utils.py
CUB/scripts/: create_new_data.sh  eval_apn.sh  run_apn.sh
ConceptModel__Seed1/outputs/: log.txt
localization/: attrbute_part_mapping.py  attributes.txt  eval.py  utils.py
